fix(style): improve shadows for dark mode

--- a/src/style/color-palette-extended.css
+++ b/src/style/color-palette-extended.css
@@ -320,11 +320,11 @@
 
     --lime-elevated-surface-background-color: rgb(var(--contrast-200));
 
-    --button-shadow-normal: 0 0.09375rem 0.225rem 0 rgb(var(--color-black), 0.632), 0 0.01875rem 0.05625rem 0 rgb(var(--color-black), 0.608);
-    --button-shadow-hovered: 0 0.125rem 0.375rem rgb(var(--color-black), 0.55), 0 0.375rem 0.625rem rgb(var(--color-black), 0.45);
-    --button-shadow-pressed: 0 0.0625rem 0.1875rem 0 rgb(var(--color-black), 0.532), 0 0.01875rem 0.05625rem 0 rgb(var(--color-black), 0.508);
-    --button-shadow-inset: 0 0.03125rem 0.21875rem 0 rgb(var(--color-black), 0.532) inset, 0 0.01875rem 0.05625rem 0 rgb(var(--color-black), 0.508) inset, 0 0 0.25rem rgb(var(--color-white), 0.1);
-    --button-shadow-inset-pressed: 0 0.03125rem 0.34375rem 0 rgb(var(--color-black), 0.532) inset, 0 0.01875rem 0.11875rem 0 rgb(var(--color-black), 0.52) inset, 0 0 0.1875rem rgb(var(--color-white), 0.1);
+    --button-shadow-normal: 0 0.09375rem 0.225rem 0 rgb(var(--color-black), 0.632), 0 0.01875rem 0.05625rem 0 rgb(var(--color-black), 0.608), var(--shadow-brighten-edges-inside);
+    --button-shadow-hovered: 0 0.125rem 0.375rem rgb(var(--color-black), 0.55), 0 0.375rem 0.625rem rgb(var(--color-black), 0.45), var(--shadow-brighten-edges-inside);
+    --button-shadow-pressed: 0 0.0625rem 0.1875rem 0 rgb(var(--color-black), 0.532), 0 0.01875rem 0.05625rem 0 rgb(var(--color-black), 0.508), var(--shadow-brighten-edges-inside);
+    --button-shadow-inset: 0 0.03125rem 0.21875rem 0 rgb(var(--color-black), 0.532) inset, 0 0.01875rem 0.05625rem 0 rgb(var(--color-black), 0.508) inset, 0 0 0.25rem rgb(var(--color-white), 0.1), var(--shadow-brighten-edges-outside);
+    --button-shadow-inset-pressed: 0 0.03125rem 0.34375rem 0 rgb(var(--color-black), 0.532) inset, 0 0.01875rem 0.11875rem 0 rgb(var(--color-black), 0.52) inset, 0 -1px 0.3rem rgb(var(--color-white), 0.1), var(--shadow-brighten-edges-outside);
     --shadow-depth-8: 0 0.2rem 0.45rem 0 rgb(var(--color-black), 0.532), 0 0.0375rem 0.1125rem 0 rgb(var(--color-black), 0.508);
     --shadow-depth-8-reversed: 0 -0.2rem 0.45rem 0 rgb(var(--color-black), 0.532), 0 -0.0375rem 0.1125rem 0 rgb(var(--color-black), 0.508);
     --shadow-depth-16: 0 0.4rem 0.9rem 0 rgb(var(--color-black), 0.532), 0 0.075rem 0.225rem 0 rgb(var(--color-black), 0.508);
@@ -478,11 +478,11 @@
 
         --lime-elevated-surface-background-color: rgb(var(--contrast-200));
 
-        --button-shadow-normal: 0 0.09375rem 0.225rem 0 rgb(var(--color-black), 0.632), 0 0.01875rem 0.05625rem 0 rgb(var(--color-black), 0.608);
-        --button-shadow-hovered: 0 0.125rem 0.375rem rgb(var(--color-black), 0.55), 0 0.375rem 0.625rem rgb(var(--color-black), 0.45);
-        --button-shadow-pressed: 0 0.0625rem 0.1875rem 0 rgb(var(--color-black), 0.532), 0 0.01875rem 0.05625rem 0 rgb(var(--color-black), 0.508);
-        --button-shadow-inset: 0 0.03125rem 0.21875rem 0 rgb(var(--color-black), 0.532) inset, 0 0.01875rem 0.05625rem 0 rgb(var(--color-black), 0.508) inset, 0 0 0.25rem rgb(var(--color-white), 0.1);
-        --button-shadow-inset-pressed: 0 0.03125rem 0.34375rem 0 rgb(var(--color-black), 0.532) inset, 0 0.01875rem 0.11875rem 0 rgb(var(--color-black), 0.52) inset, 0 0 0.1875rem rgb(var(--color-white), 0.1);
+        --button-shadow-normal: 0 0.09375rem 0.225rem 0 rgb(var(--color-black), 0.632), 0 0.01875rem 0.05625rem 0 rgb(var(--color-black), 0.608), var(--shadow-brighten-edges-inside);
+        --button-shadow-hovered: 0 0.125rem 0.375rem rgb(var(--color-black), 0.55), 0 0.375rem 0.625rem rgb(var(--color-black), 0.45), var(--shadow-brighten-edges-inside);
+        --button-shadow-pressed: 0 0.0625rem 0.1875rem 0 rgb(var(--color-black), 0.532), 0 0.01875rem 0.05625rem 0 rgb(var(--color-black), 0.508), var(--shadow-brighten-edges-inside);
+        --button-shadow-inset: 0 0.03125rem 0.21875rem 0 rgb(var(--color-black), 0.532) inset, 0 0.01875rem 0.05625rem 0 rgb(var(--color-black), 0.508) inset, 0 0 0.25rem rgb(var(--color-white), 0.1), var(--shadow-brighten-edges-outside);
+        --button-shadow-inset-pressed: 0 0.03125rem 0.34375rem 0 rgb(var(--color-black), 0.532) inset, 0 0.01875rem 0.11875rem 0 rgb(var(--color-black), 0.52) inset, 0 -1px 0.3rem rgb(var(--color-white), 0.1), var(--shadow-brighten-edges-outside);
         --shadow-depth-8: 0 0.2rem 0.45rem 0 rgb(var(--color-black), 0.532), 0 0.0375rem 0.1125rem 0 rgb(var(--color-black), 0.508);
         --shadow-depth-8-reversed: 0 -0.2rem 0.45rem 0 rgb(var(--color-black), 0.532), 0 -0.0375rem 0.1125rem 0 rgb(var(--color-black), 0.508);
         --shadow-depth-16: 0 0.4rem 0.9rem 0 rgb(var(--color-black), 0.532), 0 0.075rem 0.225rem 0 rgb(var(--color-black), 0.508);
